--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/@ng-bootstrap/ng-bootstrap/fesm5/ng-bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
