--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              "./node_modules/@ng-bootstrap/ng-bootstrap/fesm5/ng-bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
