--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.1",
     "@ng-select/ng-select": "^2.20.5",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
