--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/compiler": "^9.0.2",
     "@angular/core": "^9.0.2",
     "@angular/forms": "^9.0.2",
-    "@angular/http": "^6.1.0",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^9.0.2",
     "@angular/platform-browser-dynamic": "^9.0.2",
     "@angular/router": "^9.0.2",
@@ -35,17 +35,18 @@
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.2",
     "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
     "@angular/cli": "^9.0.3",
     "@angular/compiler-cli": "^9.0.2",
-    "@angular/language-service": "^6.1.0",
+    "@angular/language-service": "^9.0.2",
     "@types/jasmine": "~3.5.6",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~13.7.4",
-    "codelyzer": "~5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
