--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mongoose": "^5.9.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
@@ -57,6 +58,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.2"
+    "typescript": "^3.4.5"
   }
 }
